src/main/java/com/example/demo/errors/exception/NotEnoughBalanceException.java
package com.example.demo.errors.exception;

public class NotEnoughBalanceException extends BaseException{
    public NotEnoughBalanceException(String s) {
        super(s);
    }
}
